feat: add desktop target